welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: Missing closing brace `}' assumed here
for (compteur1 <- 1 to 28) {
^